# village-svn

trunk/: configure.ac
trunk/data/: Makefile.am  background.ini  buildings.ini  createlib.c  cursor.ini  flora.ini  humans.ini  menubar.ini  miscfixed.ini
trunk/src/: Makefile.am  astar.c  astar.h  buildings.c  buildings.h  config.h.in  humans.c  humans.h  library.c  library.h  map.c  map.h  menubar.c  menubar.h  screen.c  screen.h  textrender.c  textrender.h  village.c
trunk/src/.deps/: astar.Po  gameloop.Po  library.Po  map.Po  menubar.Po  screen.Po  village-astar.Po  village-buildings.Po  village-gameloop.Po  village-humans.Po  village-library.Po  village-map.Po  village-menubar.Po  village-screen.Po  village-textrender.Po  village-village.Po  village.Po
