bin_PROGRAMS     = village
village_CFLAGS   = -DDATADIR='"${datadir}/${PACKAGE_TARNAME}"'
village_LDADD    = $(SDL_LIBS)
noinst_HEADERS   = astar.h map.h screen.h library.h menubar.h textrender.h buildings.h humans.h
village_SOURCES  = astar.c map.c screen.c library.c menubar.c textrender.c buildings.c humans.c village.c
